--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,3 @@
-
-
 name: test-workflow
 on: push
 
@@ -14,3 +12,17 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
+
+  parallel-with-matrix:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        index: [1,2,3]
+    
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm audit
