--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,3 +26,17 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm audit
+
+  dependency-example:
+    runs-on: ubuntu-latest
+    needs:
+        - parallel-with-matrix
+        - label
+    
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm audit
