--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        index: [1,2,3]
+        index: [1,2,'hello']
     
     steps:
       - uses: actions/checkout@v3
