--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,11 +13,20 @@ jobs:
       - run: npm ci
       - run: npm audit
 
+  artifact:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: test.txt
+
   parallel-with-matrix:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        index: [1,2,'hello']
+        index: [1,2,3]
     
     steps:
       - uses: actions/checkout@v3
