--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+      - name: Sleep for 5 minutes
+        run: sleep 300s
+        shell: bash
       - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
