--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        index: [1,2,'hello']
+        index: [1,2,'hello', 'sup']
     
     steps:
       - uses: actions/checkout@v3
